# fraudcase-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  create_vector_index.py  embed_and_load.py  fraudcase-gcp-key.example.json  live_case.py  pyproject.toml  requirements.txt  uipath.json  vector_index.json
demo_dataset/: budgets.json  generate_data.py  invoices.json  policies.json  vendors.json
docs/: agenthack-alignment.md
fraudcase_ai/: __init__.py  config.py  models.py
fraudcase_ai/agent/: __init__.py  embedding.py  gates.py  llm.py  mcp_reads.py  narration.py  pipeline.py  report.py  roster.py
fraudcase_ai/coded_agent/: __init__.py  context_grounding.py  main.py
fraudcase_ai/data/: __init__.py  load.py
fraudcase_ai/server/: __init__.py  app.py  events.py  insights.py  real_runner.py  runner.py  store.py  uipath_runner.py
fraudcase_ai/tools/: __init__.py  dedup.py  flagging.py  mongo_reads.py  ofac.py  policy.py  triage.py
fraudcase_ai/uipath/: __init__.py  clients.py
fraudcase_ai/web/: app.js  index.html  mockserver.py  styles.css
fraudcase_ai/web/js/: app.ask.js  app.core.js  app.dashboard.js  app.events.js  app.exports.js  app.gates.js  app.timeline.js  (+1 more)
tests/: conftest.py  test_contracts.py
tests/integration/: test_e2e_mock.py
uipath/: build_dataservice_csv.py  build_evidence.py  fraudcase-ai-openapi.yaml  maestro-case-blueprint.md  seed_data_service.py
uipath/context_grounding_evidence/: README.md  evidence.csv  evidence.jsonl
uipath/dataservice_seed/: Policy.csv  README.md  Transaction.csv  Vendor.csv
(+18 files in other folders)
