[project]
name = "fraudcase-ai"
version = "0.1.0"
description = "FraudCase AI finance transaction audit case workflow for UiPath Maestro Case"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "FraudCase AI" }]
# Runtime deps for the UiPath coded-agent package (uipath pack reads these).
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2",
    "pydantic-settings>=2",
    "uipath",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["fraudcase_ai"]
